[project]
name = "llm-web"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "coolname>=2.2.0",
    "json5>=0.12.0",
    "streamlit>=1.46.1",
    "streamlit-echarts>=0.4.0",
    "streamlit-javascript>=0.1.5",
]

[[tool.uv.index]]
url = "https://mirrors.aliyun.com/pypi/simple"
default = true
