[project]
name = "llm-web"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "coolname>=2.2.0",
    "dotenv>=0.9.9",
    "json5>=0.12.0",
    "langchain>=0.3.26",
    "langchain-mcp-adapters>=0.1.9",
    "langchain-openai>=0.3.28",
    "langgraph>=0.5.3",
    "streamlit>=1.46.1",
    "streamlit-echarts>=0.4.0",
    "streamlit-javascript>=0.1.5",
    "watchdog>=6.0.0",
]

[[tool.uv.index]]
url = "https://mirrors.aliyun.com/pypi/simple"
default = true
